--- a/styles.css
+++ b/styles.css
@@ -1,116 +1,98 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  scroll-behavior: smooth;
-}
-
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
-}
-
-header {
-  background-color: #333;
-  color: white;
-  overflow: hidden;
-}
-
-.header-left {
-  float: left;
-  margin-left: 20px;
-  padding: 10px;
-}
-
-.header-left h1 {
-  font-size: 36px;
-  margin: 0;
-}
-
-.header-right {
-  float: right;
-  padding: 20px;
-}
-
-header .navbar ul {
-  list-style: none;
-}
-
-header .navbar ul li {
-  float: left;
-}
-
-header .navbar ul li a {
-  color: white;
-  text-decoration: none;
-  font-size: 18px;
-  padding: 20px;
-}
-
-header .navbar ul li a:hover {
-  color: black;
-  background-color: white;
-  transition: all 0.1s;
-}
-
-.sidebar-left {
-  float: left;
-  padding: 20px 25px;
-  font-size:20px;
-  color: white;
-  background-color: rgba(128, 128, 128, 0.587);
-  list-style:none;
-  text-decoration: none;
-  color: #333;
-  font-weight: bold;
-  padding: 20px 25px;
-  display: inline-block;
-  width: 25%;
-  margin-right: 10px;
-}
-
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+    }
+    body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    }
+    header {
+    background-color: #333;
+    color: white;
+    overflow: hidden;
+    }
+    .header-left {
+    float: left;
+    margin-left: 20px;
+    padding: 10px;
+    }
+    .header-left h1 {
+    font-size: 36px;
+    margin: 0;
+    }
+    .header-right {
+    float: right;
+    padding: 20px;
+    }
+    header .navbar ul {
+    list-style: none;
+    }
+    header .navbar ul li {
+    float: left;
+    }
+    header .navbar ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 20px;
+    }
+    header .navbar ul li a:hover {
+    color: black;
+    background-color: white;
+    transition: all 0.1s;
+    }
+    .sidebar-left {
+    width: 25%;
+    float: left;
+    }
 .sidebar-left h3 {
-  margin-bottom: 15px;
+padding: 20px;
+font-size: 20px;
+background-color:grey;
+color: white;
 }
-
 .sidebar-left ul {
-  list-style: none;
+list-style: none;
 }
-
+.sidebar-left ul li svg {
+    margin-right: 10px;
+}
 .sidebar-left ul li {
-  margin-bottom: 10px;
+    margin-bottom: 10px;
+    padding: 25px;
 }
-
 .sidebar-left ul li a {
-  text-decoration: underline;
-  color: #333;
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+    padding: 20px;
+    display: block;
+    width: 100%;
 }
-
 .sidebar-left ul li a:hover {
-  color: #ff6600;
+    color: white;
+    background-color: blue;
 }
-
 .content {
-  width: 75%;
-  float: right;
-  background-color: #fff;
-  padding: 20px;
-  border: 1px solid #ddd;
+    width: 75%;
+    float: left;
+    background-color: #fff;
+    padding: 20px;
+    border: 1px solid #ddd;
 }
-
 .content h2 {
-  color: #333;
-  margin-bottom: 15px;
+    color: #333;
+    margin-bottom: 15px;
 }
-
 .content p {
-  margin-bottom: 20px;
+    margin-bottom: 20px;
 }
-
 footer {
-  clear: both;
-  background-color: #333;
-  color: white;
-  padding: 20px 0;
-  text-align: center;
+    clear: both;
+    background-color: #333;
+    color: white;
+    padding: 20px 0;
+    text-align: center;
 }
